# AdaptiveCards

./: .gitignore
.github/: pull_request_template.md
samples/v1.5/Scenarios/: InputsWithValidation.json
source/android/: build.gradle  constants.gradle
source/android/adaptivecards/: build.gradle
source/android/gradle/wrapper/: gradle-wrapper.properties
source/android/mobile/: build.gradle
source/android/mobilechatapp/: build.gradle
source/android/uitestapp/: build.gradle
source/dotnet/: AdaptiveCards.sln
source/macos/: .travis.yml
source/macos/ADCMacOSVisualizer/ADCMacOSVisualizer/: AppDelegate.swift  Application.xib  MainViewController.swift  RootViewController.swift  RootViewController.xib  TestUtils.swift  Utils.swift
source/macos/ADCMacOSVisualizer/ADCMacOSVisualizer.xcodeproj/: project.pbxproj
source/macos/ADCMacOSVisualizer/ADCMacOSVisualizerUITests/: ADCMacOSVisualizerUITests.swift
source/macos/AdaptiveCards/AdaptiveCards/: AdaptiveCard.swift
source/macos/AdaptiveCards/AdaptiveCards-bridge/: AdaptiveCards_bridge.h  BridgeConverter.h  BridgeConverter.mm
source/macos/AdaptiveCards/AdaptiveCards-shared/: AdaptiveCards_shared.h
source/macos/AdaptiveCards/AdaptiveCards.xcodeproj/: project.pbxproj
source/macos/AdaptiveCards/AdaptiveCardsTests/: AdaptiveCardsTests.swift  TestHelpers.swift
source/macos/Scripts/: verify-swiftlint.sh
source/nodejs/adaptivecards/src/: card-elements.ts
source/qml/QmlRendererUnitTest/: QmlRendererUnitTest.cpp  QmlRendererUnitTest.vcxproj
source/qml/QmlRendererUnitTest/QMLFiles/: CardActions.qml  ChoiceSets.qml  ConcurOneApproval.qml  ConcurTwoApprovalOnClick.qml  JiraBot.qml  NumberInput.qml  SimpleAdaptiveCard.qml  (+1 more)
source/qml_v2/: CMakeLists.txt
source/qml_v2/AdaptiveCardQmlEngine/: AdaptiveCardConfig.cpp  AdaptiveCardConfig.h  AdaptiveCardContext.cpp  AdaptiveCardContext.h  AdaptiveCardQmlTypes.h  AdaptiveRenderArgs.cpp  AdaptiveRenderArgs.h  CMakeLists.txt  Formatter.cpp  Formatter.h  resourceEngine.qrc
source/qml_v2/AdaptiveCardQmlEngine/controllers/: AdaptiveCardController.cpp  AdaptiveCardController.h
source/qml_v2/AdaptiveCardQmlEngine/engineQmlFiles/: AdaptiveCard.qml  engineResource.qrc
source/qml_v2/AdaptiveCardQmlEngine/models/: AdaptiveCardModel.cpp  AdaptiveCardModel.h  AdaptiveWarning.cpp  AdaptiveWarning.h  ChoiceSetInputModel.cpp  ChoiceSetInputModel.h  CollectionItemModel.cpp  CollectionItemModel.h  DateInputModel.cpp  DateInputModel.h  ImageModel.cpp  ImageModel.h  NumberInputModel.cpp  NumberInputModel.h  RenderEnums.h  RichTextBlockModel.cpp  RichTextBlockModel.h  TextBlockModel.cpp  TextBlockModel.h  TextInputModel.cpp  TextInputModel.h  TimeInputModel.cpp  TimeInputModel.h  ToggleInputModel.cpp  ToggleInputModel.h
source/qml_v2/AdaptiveCardQmlEngine/qml/: AdaptiveCard.qml  CardConstants.qml  CardGenericTextElement.qml  ChoiceSetRender.qml  CollectionItem.qml  CollectionItemDelegate.qml  ComboboxRender.qml  CustomCheckBox.qml  CustomRadioButton.qml  DateInputPopout.qml  DateInputRender.qml  DateInputTextField.qml  ImageRender.qml  InputErrorMessage.qml  InputFieldClearIcon.qml  InputLabel.qml  MultiLineTextInputRender.qml  NumberInputRender.qml  RichTextBlockRender.qml  RichTextBlockRender_old.qml  SingleLineTextInputRender.qml  TextBlockRender.qml  TextInputRender.qml  TimeInputPopout.qml  TimeInputRender.qml  TimeInputTextField.qml  TimePickerListView.qml  ToggleInputRender.qml  WCustomFocusItem.qml
source/qml_v2/AdaptiveCardQmlEngine/qml/JSUtils/: AdaptiveCardUtils.js
source/qml_v2/AdaptiveCardQmlEngine/utils/: AdaptiveCardEnums.h  AdaptiveCardUtils.cpp  AdaptiveCardUtils.h  Utils.cpp  Utils.h
source/qml_v2/AdaptiveCardVisualizer/: CMakeLists.txt  SampleCardController.cpp  SampleCardController.h  SampleCardListModel.cpp  SampleCardListModel.h  main.cpp  resourceVisualizer.qrc
source/qml_v2/AdaptiveCardVisualizer/JSONSamples/: choiceSetInput.json  factSet.json  inputText.json  richTextBlock.json  simpleColumnSet.json
source/qml_v2/AdaptiveCardVisualizer/qmlFiles/: CardEditor.qml  CardViewer.qml  SampleCardListView.qml  main.qml  resource.qrc
source/uwp/ObjectModelProjection/: ObjectModelProjection.vcxproj  ObjectModelProjection.vcxproj.filters
source/uwp/Renderer/: AdaptiveCardRenderer.vcxproj
(+533 files in other folders)
